# src/controllers/employees.js
@@ -1,10 +1,9 @@
-const mongoose = require("mongoose");
-const { contact } = require("../database/schema");
+const { employee } = require("../database/schema");
 const data = require("../database/MOCK_DATA.json")
 
 // 
 
-const getContacts = (req, res) => {
+const getEmployees = (req, res) => {
   /*  #swagger.parameters['First Name'] = {
         type: 'string',
         required: false,
@@ -29,7 +28,7 @@ const getContacts = (req, res) => {
         description: 'Filter by gender',
       }
 
-            #swagger.parameters['Job'] = {
+      #swagger.parameters['Job'] = {
         type: 'string',
         required: false,
         name: 'job',
@@ -39,10 +38,10 @@ const getContacts = (req, res) => {
 
       #swagger.responses[200] = {
         description: 'OK',
-        schema: { $ref: '#/definitions/Contact' }
+        schema: { $ref: '#/definitions/Employee' }
       }
   */
-  contact.find(req.query)
+  employee.find(req.query)
     .collation({ locale: "en", strength: 2 })
     .exec()
     .then((data) => {
@@ -51,56 +50,52 @@ const getContacts = (req, res) => {
 
 }
 
-const getContactById = (req, res) => {
-  
+const getEmployeeById = (req, res) => {
   const id = req.params.id
-  contact.findOne({employee_id: id}).exec().then((data) => {
+  employee.findOne({employee_id: id}).exec().then((data) => {
     res.status(200).json(data)
   })
 }
 
-
-
-
 /**
- * Add a new contact to the database.
+ * Add a new employee to the database.
  *
  * @param {Object} req - The express request object
  * @param {Object} res - The express response object
  *
  * @returns {void}
  */
-const addContact = (req, res) => {
+const addEmployee = (req, res) => {
   /*  #swagger.parameters['Body'] = {
           in: 'body',
           description: 'Add a user details',
           required: true,
-          schema: { $ref: '#/definitions/Contact' }
+          schema: { $ref: '#/definitions/Employee' }
   } */
-  const newContact = new contact(req.body)
-  newContact.save().then((data) => {
+  const newEmployee = new employee(req.body)
+  newEmployee.save().then((data) => {
     res.status(200).json(data)
   })
 }
 
-const updateContact = (req, res) => {
+const updateEmployee = (req, res) => {
   /*  #swagger.parameters['Body'] = {
           in: 'body',
-          description: 'Update contact details by employee id',
+          description: 'Update employee details by employee id',
           required: true,
-          schema: { $ref: '#/definitions/Contact' }
+          schema: { $ref: '#/definitions/Employee' }
   } */
   const id = req.params.id
   console.log(req.body)
-  contact.findOneAndUpdate({employee_id: id}, req.body, {new: true}).exec().then((data) => {
+  employee.findOneAndUpdate({employee_id: id}, req.body, {new: true}).exec().then((data) => {
 
     res.status(200).json(data)
   })
 }
 
-const deleteContact = (req, res) => {
+const deleteEmployee = (req, res) => {
   const id = req.params.id
-  contact.findOneAndDelete({employee_id: id}).exec().then((data) => {
+  employee.findOneAndDelete({employee_id: id}).exec().then((data) => {
     res.status(200).json({message: "data deleted"})
   })
 }
@@ -108,19 +103,19 @@ const deleteContact = (req, res) => {
 // Fills the database with data if empty
 const initDatabase = (req, res) => {
   // #swagger.ignore = true
-  if(contact.length > 0) {
+  if(employee.length > 0) {
     res.status(200).json({message: "Already data in database."})
     return
   }
-  contact.insertMany(data)
+  employee.insertMany(data)
   res.status(200).json({message: "data inserted"})
 }
 
 module.exports = {
-  getContacts,
+  getEmployees,
   initDatabase,
-  addContact,
-  deleteContact,
-  getContactById,
-  updateContact
+  addEmployee,
+  deleteEmployee,
+  getEmployeeById,
+  updateEmployee
 }
