# src/routes/root.js
@@ -4,13 +4,15 @@ const router = express.Router();
 
 router.get("/", (req, res) => {
   // #swagger.ignore = true
-  res.send(`Welcome to the Contact List API. To view the docs, visit http://localhost:${process.env.PORT || 3000}/api`);
+  res.send(`Welcome to the Employee List API. To view the docs, visit http://localhost:${process.env.PORT || 3000}/api`);
 })
 
 // Add the documentation routes to the router
 router.use("/api", require("./apiDocsRoute"));
 
-// Add the contact routes to the router
-router.use("/api/contacts", require("./contactsRoute"));
+// Add the employee routes to the router
+router.use("/api/employees", require("./employeeRoute")/** #swagger.tags = ["Employees"] */);
+
+router.use("/api/projects", require("./projectRoute")/** #swagger.tags = ["Departments"] */);
 
 module.exports = router
